# MNTP

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  PacketStructure.txt  README.md  ltn.service
Client/: MNTP-Client  MNTP-Server  Main.cpp  build.sh
Client/ClientNew/: GetTime.cpp  Main.cpp  common.h
Server/: MNTP-Server  Main.cpp  build.sh
